syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract;

// Common definitions of the DistLedger Service contract

enum OperationType {
	OP_UNSPECIFIED = 0;
	OP_TRANSFER_TO = 1;
	OP_CREATE_ACCOUNT = 2;
	OP_DELETE_ACCOUNT = 3;
}

message VectorClock {
	repeated int32 ts = 1;
}

message Operation {
	OperationType type = 1;
	string userId = 2;
	string destUserId = 3;	//only for transferTo operations
	int32 amount = 4;	//only for transferTo operations
	VectorClock prevTS = 5;
	VectorClock TS = 6;
}

message LedgerState {
	repeated Operation ledger = 1;
}

message Server {
	string qualifier = 1;
	string host = 2;
	int32 port = 3;
}
